k8s/base/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: taller-mecanico
  labels:
    name: taller-mecanico
    app: taller-mecanico
    environment: production
